# collision-simulator-qt6

./: .gitignore  Animation.cpp  Animation.h  Ball.cpp  Ball.h  CMakeLists.txt  README.md  collision.cpp  collision.h  main.cpp
